@@ -11,17 +11,17 @@
 
   The \code{readFKtable} reads a table from file, and checks if it
   contains provided foreign keys: either as row.names or in the first
-  column. An important difference here from databases is that the order
-  of the foreign keys must be exactly the same in the file, there will
-  be no automatical matching done.
+  column.
 }
 \usage{
-readFKtable(file, fk, ...)
+readFKtable(file, fk, strict.order=FALSE, ...)
 }
 \arguments{
-  \item{file}{A table file}
-  \item{fk}{Characters, foreign keys}
-  \item{\dots}{Other parameters passed to the \code{read.table} function}
+  \item{file}{A table file.}
+  \item{fk}{Characters, foreign keys.}
+  \item{strict.order}{Logical, whether the foreign keys must have the
+    same order as they appear in the file.}
+  \item{\dots}{Other parameters passed to the \code{read.table} function.}
 }
 \value{
   A \code{data.frame} if the FK-matching was successful, otherwise the
@@ -42,5 +42,11 @@ readFKtable(test.file, fk=fk.teams)
 test.df <- data.frame(team=fk.teams, pts=c(15,14,15),plc=c("H", "G", "H"))
 write.table(test.df, test.file)
 readFKtable(test.file, fk=fk.teams)
+
+## try strict.order=TRUE
+test.df <- data.frame(pts=c(15,14,13), plc=c("H", "G", "H"), row.names=rev(fk.teams))
+write.table(test.df, test.file)
+readFKtable(test.file, fk=fk.teams, strict.order=FALSE)
+\dontrun{readFKtable(test.file, fk=fk.teams, strict.order=TRUE)}
 }
 
